syntax = "proto3";

package booking.v1;

option go_package = "booking/api/booking/v1;bookingv1";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
}

message CreateBookingRequest {
  int64 user_id = 1 [(buf.validate.field).int64.gt = 0];
  string hotel_id = 2 [(buf.validate.field).string.uuid = true];
  google.protobuf.Timestamp check_in = 3 [(buf.validate.field).required = true];
  google.protobuf.Timestamp check_out = 4 [(buf.validate.field).required = true];
  string guest_name = 5 [(buf.validate.field).string.min_len = 1];
  optional string guest_email = 6 [(buf.validate.field).string.email = true];
  optional string guest_phone = 7 [(buf.validate.field).string = {min_len: 5, max_len: 32}];
  string currency = 8 [(buf.validate.field).string.pattern = "^[A-Z]{3}$"];
  string expected_total_amount = 9 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.pattern = "^[0-9]+(\\.[0-9]{1,18})?$"
  ];
  repeated CreateBookingRoom rooms = 10 [(buf.validate.field).repeated.min_items = 1];
  option (buf.validate.message).cel = {
    id: "booking.dates.order"
    message: "check_out must be after check_in"
    expression: "this.check_out > this.check_in"
  };
}

message CreateBookingRoom {
  string room_id = 1 [(buf.validate.field).string.uuid = true];
  uint32 adults = 2 [(buf.validate.field).uint32 = {gte: 1, lte: 20}];
  uint32 children = 3 [(buf.validate.field).uint32.lte = 20];
  string price_per_night = 4 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.pattern = "^[0-9]+(\\.[0-9]{1,18})?$"
  ];
}

message CreateBookingResponse {
  Booking booking = 1;
}

message CreateBookingRoomResponse {
  string room_id = 1;
  uint32 adults = 2;
  uint32 children = 3;
  string price_per_night = 4;
}

message Booking {
  string id = 1;
  int64 user_id = 2;
  string hotel_id = 3;
  repeated CreateBookingRoomResponse booking_rooms = 4;
  google.protobuf.Timestamp check_in = 5;
  google.protobuf.Timestamp check_out = 6;
  BookingStatus status = 7;
  string guest_name = 8;
  optional string guest_email = 9;
  optional string guest_phone = 10;
  string currency = 11;
  string final_total_amount = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

enum BookingStatus {
  BOOKING_STATUS_UNSPECIFIED = 0;
  BOOKING_STATUS_PENDING = 1;
  BOOKING_STATUS_CONFIRMED = 2;
  BOOKING_STATUS_CANCELLED = 3;
}
